Add form fields to Survey Form

--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -1,36 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>A Survey</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/4.4.0/font/octicons.css" />
     <link rel="stylesheet" href="style.css" media="screen" />
   </head>
   <body>
-    <!-- https://codepen.io/bauhouse/pen/bKVaLJ -->
     <main id="main" class="content">
       <div class="text">
-        <h1 id="title">Bridge of Death</h1>
-        <h2>Immigration Survey</h2>
-        <p id="">Stop! Who would cross the Bridge of Death must answer me these questions three, 'ere the other side he see.</p>
-          <form class="survey">
-            <label id="name-label" for="name">What is your name?</label>
-            <input id="name" type="text" placeholder="Sir Launcelot of Camelot" />
-            <label id="quest-label" for="quest">What is your quest?</label>
-            <select id="quest">
-              <option value="grail">Search for the Holy Grail</option>
-              <option value="defeat">Defeat the Black Knight</option>
-              <option value="cross">Cross the Bridge of Death</option>
-            </select>
-            <label id="number-label" for="number">What is the air-speed velocity of an unladen swallow (in km/h)?</label>
-            <input id="number" type="number" placeholder="60" />
-            <label id="comments-label" for="comments">Do you have any other comments before your fate is decided?</label>
-            <textarea id="comments" rows="6" placeholder="My favourite colour is blue."></textarea>
-           <label id="email-label" for="email">Email</label>
-            <input id="email" type="email" placeholder="name@example.com" />
-
+        <h1>Bridge of Death</h1>
+        <h2 id="title">Immigration and Customs Enforcement</h2>
+        <p id="description"><strong>Stop!</strong> Who would cross the Bridge of Death must answer me these questions three (or more), 'ere the other side he see.</p>
+        <p class="note">Items indicated by <span class="required">*</span> are required.</p>
+          <form id="survey-form" class="survey" action="submit.html" method="get">
+            <label id="name-label" class="field" for="name">What is your name? <span class="required">*</span></label>
+            <input id="name" name="name" type="text" placeholder="Sir Launcelot of Camelot" required />
+            <label id="email-label" class="field" for="email">What is your email address?</label>
+            <input id="email" name="email" type="email" placeholder="name@example.com" />
+            <label id="occupation-label" class="field" for="occupation">What is your occupation?</label>
+            <div id="occupation" class="checkboxes">
+              <input id="occupation-1" type="checkbox" name="occupation"> <label for="occupation-1" class="checkbox">King</label>
+              <input id="occupation-2" type="checkbox" name="occupation"> <label for="occupation-2" class="checkbox">Knight</label>
+              <input id="occupation-3" type="checkbox" name="occupation"> <label for="occupation-3" class="checkbox">Peasant</label>
+              <input id="occupation-4" type="checkbox" name="occupation"> <label for="occupation-4" class="checkbox">Police Officer</label>
+            </div>
+            <label id="oppress-label" class="field" for="oppressed">Is the king oppressing you?</label>
+            <div class="radio-buttons">
+              <input name="oppressed" type="radio" value="yes" /> <label for="oppressed">Yes</label>
+              <input name="oppressed" type="radio" value="no" /> <label for="oppressed">No</label>
+            </div>
+            <label id="dropdown-label" class="field" for="dropdown">What is your quest? <span class="required">*</span></label>
+            <div class="dropdown">
+              <div class="dropdown-options">
+                <select id="dropdown" name="quest" class="select-box" required>
+                  <option value="grail">Search for the Holy Grail</option>
+                  <option value="defeat">Defeat the Black Knight</option>
+                  <option value="cross">Cross the Bridge of Death</option>
+                  <option value="rabbit">Lob the Holy Hand Grenade at the Rabbit of Caerbannog</option>
+                  <option value="other">Other (please specify)</option>
+                </select>
+              </div>
+            </div>
+            <label id="other-label" class="field" for="name">If you chose “Other”, briefly describe your quest:</label>
+            <input id="other" name="quest-other" type="text" placeholder="I just want to sing" />
+            <label id="number-label" class="field" for="number">What is the air-speed velocity of an unladen swallow (in km/h)? <span class="required">*</span></label>
+            <input id="number" name="velocity" type="number" placeholder="60" min="0" max="200" required />
+            <label id="comments-label" class="field" for="comments">Do you have any other comments before your fate is decided?</label>
+            <textarea id="comments" name="comments" rows="6" placeholder="My favourite colour is red. No, blue."></textarea>
             <button id="submit" type="submit">Submit</button>
           </form>
         </div>
