Add an option with an empty value to the Survey Form to fix validation for the quest select field

--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -37,6 +37,7 @@
             <div class="dropdown">
               <div class="dropdown-options">
                 <select id="dropdown" name="quest" class="select-box" required>
+                  <option value="">None of your business</option>
                   <option value="grail">Search for the Holy Grail</option>
                   <option value="defeat">Defeat the Black Knight</option>
                   <option value="cross">Cross the Bridge of Death</option>
