Put id attribute on h1 element of Survey Form

--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -12,8 +12,8 @@
   <body>
     <main id="main" class="content">
       <div class="text">
-        <h1>Bridge of Death</h1>
-        <h2 id="title">Immigration and Customs Enforcement</h2>
+        <h1 id="title">Bridge of Death</h1>
+        <h2>Immigration and Customs Enforcement</h2>
         <p id="description"><strong>Stop!</strong> Who would cross the Bridge of Death must answer me these questions three (or more), 'ere the other side he see.</p>
         <p class="note">Items indicated by <span class="required">*</span> are required.</p>
           <form id="survey-form" class="survey" action="submit.html" method="get">
