--- a/responsive/survey/submit.html
+++ b/responsive/survey/submit.html
@@ -13,8 +13,8 @@
     <!-- https://codepen.io/bauhouse/pen/bKVaLJ -->
     <main id="main" class="content">
       <div class="text">
-        <h1>Bridge of Death</h1>
-        <h2 id="title">Immigration and Customs Enforcement</h2>
+        <h1 id="title">Bridge of Death</h1>
+        <h2>Immigration and Customs Enforcement</h2>
         <h3>Thank You</h3>
         <p id="message">We sincerely appreciate your participation in our survey.
           We hope that you enjoy your journey on the other side of the Bridge of Death.</p>
