Add value attribute to checkbox fields

--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -23,10 +23,10 @@
             <input id="email" name="email" type="email" placeholder="name@example.com" />
             <label id="occupation-label" class="field" for="occupation">What is your occupation?</label>
             <div id="occupation" class="checkboxes">
-              <input id="occupation-1" type="checkbox" name="occupation"> <label for="occupation-1" class="checkbox">King</label>
-              <input id="occupation-2" type="checkbox" name="occupation"> <label for="occupation-2" class="checkbox">Knight</label>
-              <input id="occupation-3" type="checkbox" name="occupation"> <label for="occupation-3" class="checkbox">Peasant</label>
-              <input id="occupation-4" type="checkbox" name="occupation"> <label for="occupation-4" class="checkbox">Police Officer</label>
+              <input id="occupation-1" type="checkbox" name="occupation" value="King"> <label for="occupation-1" class="checkbox">King</label>
+              <input id="occupation-2" type="checkbox" name="occupation" value="Knight"> <label for="occupation-2" class="checkbox">Knight</label>
+              <input id="occupation-3" type="checkbox" name="occupation" value="Peasant"> <label for="occupation-3" class="checkbox">Peasant</label>
+              <input id="occupation-4" type="checkbox" name="occupation" value="Police Officer"> <label for="occupation-4" class="checkbox">Police Officer</label>
             </div>
             <label id="oppress-label" class="field" for="oppressed">Is the king oppressing you?</label>
             <div class="radio-buttons">
