--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -19,8 +19,8 @@
           <form id="survey-form" class="survey" action="submit.html" method="get">
             <label id="name-label" class="field" for="name">What is your name? <span class="required">*</span></label>
             <input id="name" name="name" type="text" placeholder="Sir Launcelot of Camelot" required />
-            <label id="email-label" class="field" for="email" required>What is your email address? <span class="required">*</span></label>
-            <input id="email" name="email" type="email" placeholder="name@example.com" />
+            <label id="email-label" class="field" for="email">What is your email address? <span class="required">*</span></label>
+            <input id="email" name="email" type="email" placeholder="name@example.com" required />
             <label id="occupation-label" class="field" for="occupation">What is your occupation?</label>
             <div id="occupation" class="checkboxes">
               <input id="occupation-1" type="checkbox" name="occupation" value="King"> <label for="occupation-1" class="checkbox">King</label>
