Survey Form: wrap label elements around checkbox and radio inputs

--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -23,15 +23,15 @@
             <input id="email" name="email" type="email" placeholder="name@example.com" required />
             <label id="occupation-label" class="field" for="occupation">What is your occupation?</label>
             <div id="occupation" class="checkboxes">
-              <input id="occupation-1" type="checkbox" name="occupation" value="King"> <label for="occupation-1" class="checkbox">King</label>
-              <input id="occupation-2" type="checkbox" name="occupation" value="Knight"> <label for="occupation-2" class="checkbox">Knight</label>
-              <input id="occupation-3" type="checkbox" name="occupation" value="Peasant"> <label for="occupation-3" class="checkbox">Peasant</label>
-              <input id="occupation-4" type="checkbox" name="occupation" value="Police Officer"> <label for="occupation-4" class="checkbox">Police Officer</label>
+              <label for="occupation-1" class="checkbox"><input id="occupation-1" type="checkbox" name="occupation" value="King"> King</label>
+              <label for="occupation-2" class="checkbox"><input id="occupation-2" type="checkbox" name="occupation" value="Knight"> Knight</label>
+              <label for="occupation-3" class="checkbox"><input id="occupation-3" type="checkbox" name="occupation" value="Peasant"> Peasant</label>
+              <label for="occupation-4" class="checkbox"><input id="occupation-4" type="checkbox" name="occupation" value="Police Officer"> Police Officer</label>
             </div>
             <label id="oppress-label" class="field" for="oppressed">Is the king oppressing you?</label>
             <div class="radio-buttons">
-              <input name="oppressed" type="radio" value="yes" /> <label for="oppressed">Yes</label>
-              <input name="oppressed" type="radio" value="no" /> <label for="oppressed">No</label>
+              <label for="oppressed-yes"><input id="occupation-yes" name="oppressed" type="radio" value="yes" /> Yes</label>
+              <label for="oppressed-no"><input id="occupation-no" name="oppressed" type="radio" value="no" /> No</label>
             </div>
             <label id="dropdown-label" class="field" for="dropdown">What is your quest? <span class="required">*</span></label>
             <div class="dropdown">
