--- a/responsive/css-flexbox/add-flex-superpowers-to-the-tweet-embed.html
+++ b/responsive/css-flexbox/add-flex-superpowers-to-the-tweet-embed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>CSS Flexbox - Use display: flex to Position Two Boxes</title>
+    <title>CSS Flexbox - Add Flex Superpowers to the Tweet Embed</title>
     <meta name="description" content="A freeCodeCamp challenge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <style>
@@ -11,7 +11,7 @@
         font-family: Arial, sans-serif;
       }
       header {
-
+        display: flex;
       }
       header .profile-thumbnail {
         width: 50px;
@@ -19,11 +19,11 @@
         border-radius: 4px;
       }
       header .profile-name {
-
+        display: flex;
         margin-left: 10px;
       }
       header .follow-btn {
-
+        display: flex;
         margin: 0 0 0 auto;
       }
       header .follow-btn button {
@@ -32,7 +32,7 @@
         padding: 5px;
       }
       header h3, header h4 {
-
+        display: flex;
         margin: 0;
       }
       #inner p {
@@ -45,10 +45,10 @@
         opacity: 0.1;
       }
       footer {
-
+        display: flex;
       }
       footer .stats {
-
+        display: flex;
         font-size: 15px;
       }
       footer .stats strong {
