--- a/responsive/survey/index.html
+++ b/responsive/survey/index.html
@@ -11,6 +11,16 @@
   </head>
   <body>
     <main id="main" class="content">
+      <div id="img-div">
+        <figure>
+          <a href="https://www.youtube.com/watch?v=dPOyOM7wxlE" target="_blank">
+            <img id="image" src="http://images.fanpop.com/images/image_uploads/Bridge-of-Death-monty-python-and-the-holy-grail-591679_800_441.jpg" />
+          </a>
+          <figcaption id="img-caption">Monty Python and The Holy Grail: Bridge of Death (<a href="https://www.youtube.com/watch?v=dPOyOM7wxlE" target="_blank">YouTube</a>). Source:
+            <a href="http://www.fanpop.com/clubs/monty-python-and-the-holy-grail/images/591679/title/bridge-death-screencap" target="_blank">Fanpop</a>.
+          </figcaption>
+        </figure>
+      </div>
       <div class="text">
         <h1 id="title">Bridge of Death</h1>
         <h2>Immigration and Customs Enforcement</h2>
