--- a/responsive/css-flexbox/apply-the-flex-direction-property-to-create-rows-in-the-tweet-embed.html
+++ b/responsive/css-flexbox/apply-the-flex-direction-property-to-create-rows-in-the-tweet-embed.html
@@ -12,7 +12,7 @@
       }
       header {
         display: flex;
-
+        flex-direction: row;
       }
       header .profile-thumbnail {
         width: 50px;
@@ -47,7 +47,7 @@
       }
       footer {
         display: flex;
-
+        flex-direction: row;
       }
       footer .stats {
         display: flex;
