Complete challenge: CSS Flexbox - Use the justify-content Property in the Tweet Embed

--- a/responsive/css-flexbox/use-the-justify-content-property-in-the-tweet-embed.html
+++ b/responsive/css-flexbox/use-the-justify-content-property-in-the-tweet-embed.html
@@ -22,7 +22,7 @@
       header .profile-name {
         display: flex;
         flex-direction: column;
-
+        justify-content: flex-start;
         margin-left: 10px;
       }
       header .follow-btn {
