--- a/responsive/css-flexbox/align-elements-using-the-align-items-property.html
+++ b/responsive/css-flexbox/align-elements-using-the-align-items-property.html
@@ -11,7 +11,7 @@
         background: gray;
         display: flex;
         height: 500px;
-
+        align-items: center;
       }
       #box-1 {
         background-color: dodgerblue;
