--- a/responsive/css-flexbox/se-the-align-items-property-in-the-tweet-embed.html
+++ b/responsive/css-flexbox/se-the-align-items-property-in-the-tweet-embed.html
@@ -27,7 +27,7 @@
       }
       header .follow-btn {
         display: flex;
-
+        align-items: center;
         margin: 0 0 0 auto;
       }
       header .follow-btn button {
@@ -37,7 +37,7 @@
       }
       header h3, header h4 {
         display: flex;
-
+        align-items: center;
         margin: 0;
       }
       #inner p {
