--- a/responsive/css-flexbox/use-the-flex-grow-property-to-expand-items.html
+++ b/responsive/css-flexbox/use-the-flex-grow-property-to-expand-items.html
@@ -15,13 +15,13 @@
       #box-1 {
         background-color: dodgerblue;
         height: 200px;
-
+        flex-grow: 1;
       }
 
       #box-2 {
         background-color: orangered;
         height: 200px;
-
+        flex-grow: 2;
       }
     </style>
   </head>
