Add alt attribute to Tribute page

--- a/responsive/tribute/index.html
+++ b/responsive/tribute/index.html
@@ -14,7 +14,8 @@
       <div id="img-div">
         <figure>
           <a href="https://www.flickr.com/photos/poetarchitecture/26806373786/in/photostream/" target="_blank">
-            <img id="image" src="https://c1.staticflickr.com/8/7157/26806373786_03b16622c5_b.jpg" />
+            <img id="image" src="https://c1.staticflickr.com/8/7157/26806373786_03b16622c5_b.jpg"
+              alt="Geodesic dome by Buckminster Fuller. United States pavilion for Expo 67, Montréal." />
           </a>
           <figcaption id="img-caption"><strong>Geodesic dome</strong> by Buckminster Fuller.
             United States pavilion for Expo 67, Montréal. Photo in public domain:
@@ -26,7 +27,8 @@
         <h1 id="title">Richard Buckminster Fuller</h1>
         <figure class="inset">
           <a href="https://www.flickr.com/photos/poetarchitecture/26773247691/in/album-72157665615758814/" target="_blank">
-            <img src="https://c1.staticflickr.com/8/7057/26773247691_c11322e19f_b.jpg" />
+            <img src="https://c1.staticflickr.com/8/7057/26773247691_c11322e19f_b.jpg"
+              alt="Buckminster Fuller at his Black Mountain College studio with models of geodesic domes, 1949." />
           </a>
           <figcaption><strong>Buckminster Fuller</strong>
             at his Black Mountain College studio with models of geodesic domes, 1949.
