--- a/frontend/projects/calculator/index.html
+++ b/frontend/projects/calculator/index.html
@@ -12,6 +12,23 @@
     <main id="calculator" class="content">
       <h1 id="display">0</h1>
       <div id="panel" class="buttons">
+         <button id="zero" class="button" value="0">0</button>
+         <button id="one" class="button" value="1">1</button>
+         <button id="two" class="button" value="2">2</button>
+         <button id="three" class="button" value="3">3</button>
+         <button id="four" class="button" value="4">4</button>
+         <button id="five" class="button" value="5">5</button>
+         <button id="six" class="button" value="6">6</button>
+         <button id="seven" class="button" value="7">7</button>
+         <button id="eight" class="button" value="8">8</button>
+         <button id="nine" class="button" value="9">9</button>
+         <button id="decimal" class="button" value=".">.</button>
+         <button id="add" class="button" value="-">-</button>
+         <button id="subtract" class="button" value="+">+</button>
+         <button id="multiply" class="button" value="*">&times;</button>
+         <button id="divide" class="button" value="/">&divide;</button>
+         <button id="clear" class="button" value="C">C</button>
+         <button id="divide" class="button" value="=">=</button>
       </div>
     </main>
     <script src="script.js"></script>
