Change minus sign to endash

--- a/frontend/projects/calculator/index.html
+++ b/frontend/projects/calculator/index.html
@@ -23,7 +23,7 @@
          <button id="eight" class="button" value="8">8</button>
          <button id="nine" class="button" value="9">9</button>
          <button id="decimal" class="button" value=".">.</button>
-         <button id="add" class="button" value="-">-</button>
+         <button id="add" class="button" value="-">–</button>
          <button id="subtract" class="button" value="+">+</button>
          <button id="multiply" class="button" value="*">&times;</button>
          <button id="divide" class="button" value="/">&divide;</button>
