Change class for equals to calculate

--- a/frontend/projects/calculator/index.html
+++ b/frontend/projects/calculator/index.html
@@ -28,7 +28,7 @@
          <button id="multiply" class="operator button" value="*">&times;</button>
          <button id="divide" class="operator button" value="/">&divide;</button>
          <button id="clear" class="function button" value="C">C</button>
-         <button id="equals" class="operator button" value="=">=</button>
+         <button id="equals" class="calculate button" value="=">=</button>
       </div>
     </main>
     <script src="script.js"></script>
