Add timer label

--- a/frontend/projects/pomodoro-clock/index.html
+++ b/frontend/projects/pomodoro-clock/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main id="clock" class="content">
+      <label id="timer-label">Session</label>
       <h1 id="display"><span id="time-left">25:00</span></h1>
       <div id="panel" class="buttons">
         <div id="session">
