--- a/frontend/projects/pomodoro-clock/index.html
+++ b/frontend/projects/pomodoro-clock/index.html
@@ -13,18 +13,19 @@
       <label id="timer-label">Session</label>
       <h1 id="display"><span id="time-left">25:00</span></h1>
       <div id="panel" class="buttons">
-        <div id="session">
+        <div id="session" class="control">
           <label id="session-label">Session Length</label>
           <button id="session-decrement" class="addition button" value="-1">–</button>
           <span id="session-length" class="duration">25</span>
           <button id="session-increment" class="addition button" value="1">+</button>
         </div>
-        <div id="break">
-          <label id="break-label">Break Length</label>          <button id="break-decrement" class="addition button" value="-1">–</button>
+        <div id="break" class="control">
+          <label id="break-label">Break Length</label>
+          <button id="break-decrement" class="addition button" value="-1">–</button>
           <span id="break-length" class="duration">5</span>
           <button id="break-increment" class="addition button" value="1">+</button>
         </div>
-        <div id="timer">
+        <div id="timer" class="control">
           <button id="start_stop" class="start button" value="start">Start</button>
           <button id="reset" class="reset button" value="reset">Reset</button>
         </div>
