Add keyboard events to calculator

--- a/frontend/projects/calculator/index.html
+++ b/frontend/projects/calculator/index.html
@@ -27,7 +27,7 @@
          <button id="subtract" class="operator button" value="-">–</button>
          <button id="multiply" class="operator button" value="*">&times;</button>
          <button id="divide" class="operator button" value="/">&divide;</button>
-         <button id="clear" class="function button" value="C">C</button>
+         <button id="clear" class="function button" value="Clear">C</button>
          <button id="equals" class="calculate button" value="=">=</button>
       </div>
     </main>
