Add data-key attribute values to Pomodoro Clock HTML

--- a/frontend/projects/pomodoro-clock/index.html
+++ b/frontend/projects/pomodoro-clock/index.html
@@ -15,19 +15,19 @@
       <div id="panel" class="buttons">
         <div id="session" class="control">
           <label id="session-label">Session Length</label>
-          <button id="session-decrement" class="addition button" value="-1">–</button>
+          <button id="session-decrement" class="addition button" value="-" data-key="ArrowDown">–</button>
           <span id="session-length" class="duration">25</span>
-          <button id="session-increment" class="addition button" value="1">+</button>
+          <button id="session-increment" class="addition button" value="+" data-key="ArrowUp">+</button>
         </div>
         <div id="break" class="control">
           <label id="break-label">Break Length</label>
-          <button id="break-decrement" class="addition button" value="-1">–</button>
+          <button id="break-decrement" class="addition button" value="-" data-key="ArrowLeft">–</button>
           <span id="break-length" class="duration">5</span>
-          <button id="break-increment" class="addition button" value="1">+</button>
+          <button id="break-increment" class="addition button" value="+" data-key="ArrowRight">+</button>
         </div>
         <div id="timer" class="control">
-          <button id="start_stop" class="start button" value="start">Start</button>
-          <button id="reset" class="reset button" value="reset">Reset</button>
+          <button id="start_stop" class="start button" value="start" data-key=" ">Start</button>
+          <button id="reset" class="reset button" value="reset" data-key="Control">Reset</button>
         </div>
       </div>
     </main>
