--- a/frontend/projects/markdown-previewer/index.html
+++ b/frontend/projects/markdown-previewer/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css" media="screen" />
   </head>
   <body>
-    <form id="main">
-      <div class="buttons">
-        <a class="tab button group left" accesskey="1" href="#markdown" id="btn-markdown">Markdown</a>
-        <a class="tab button group gap right" accesskey="2" href="#preview" id="btn-preview">Preview</a>
-      </div>
+    <div class="buttons">
+      <button id="btn-markdown" class="button" accesskey="1">Markdown</a>
+      <button id="btn-preview" class="button" accesskey="2">Preview</a>
+    </div>
+    <div id="panel" class="both">
       <textarea id="editor" name="markdown" cols="50" rows="20">
 Markdown: Syntax
 ================
@@ -74,60 +74,11 @@ look like \*emphasis\*. Markdown lists look like, well, lists. Even
 blockquotes look like quoted passages of text, assuming you've ever
 used email.
 </textarea>
-      <div id="preview">
-
-        <h1>Markdown: Syntax</h1>
-
-        <ul>
-        <li><a href="#overview">Overview</a>
-        <ul><li><a href="#philosophy">Philosophy</a></li>
-        <li><a href="#html">Inline HTML</a></li>
-        <li><a href="#autoescape">Automatic Escaping for Special Characters</a></li></ul></li>
-        <li><a href="#block">Block Elements</a>
-        <ul><li><a href="#p">Paragraphs and Line Breaks</a></li>
-        <li><a href="#header">Headers</a></li>
-        <li><a href="#blockquote">Blockquotes</a></li>
-        <li><a href="#list">Lists</a></li>
-        <li><a href="#precode">Code Blocks</a></li>
-        <li><a href="#hr">Horizontal Rules</a></li></ul></li>
-        <li><a href="#span">Span Elements</a>
-        <ul><li><a href="#link">Links</a></li>
-        <li><a href="#em">Emphasis</a></li>
-        <li><a href="#code">Code</a></li>
-        <li><a href="#img">Images</a></li></ul></li>
-        <li><a href="#misc">Miscellaneous</a>
-        <ul><li><a href="#backslash">Backslash Escapes</a></li>
-        <li><a href="#autolink">Automatic Links</a></li></ul></li>
-        </ul>
-
-        <p><strong>Note:</strong> This document is itself written using Markdown; you
-        can <a href="/projects/markdown/syntax.text">see the source for it by adding ‘.text’ to the URL</a>.</p>
-
-        <hr>
-
-        <h2 id="overview">Overview</h2>
-
-        <h3 id="philosophy">Philosophy</h3>
-
-        <p>Markdown is intended to be as easy-to-read and easy-to-write as is feasible.</p>
-
-        <p>Readability, however, is emphasized above all else. A Markdown-formatted
-        document should be publishable as-is, as plain text, without looking
-        like it’s been marked up with tags or formatting instructions. While
-        Markdown’s syntax has been influenced by several existing text-to-HTML
-        filters — including <a href="http://docutils.sourceforge.net/mirror/setext.html">Setext</a>, <a href="http://www.aaronsw.com/2002/atx/">atx</a>, <a href="http://textism.com/tools/textile/">Textile</a>, <a href="http://docutils.sourceforge.net/rst.html">reStructuredText</a>,
-        <a href="http://www.triptico.com/software/grutatxt.html">Grutatext</a>, and <a href="http://ettext.taint.org/doc/">EtText</a> — the single biggest source of
-        inspiration for Markdown’s syntax is the format of plain text email.</p>
-
-        <p>To this end, Markdown’s syntax is comprised entirely of punctuation
-        characters, which punctuation characters have been carefully chosen so
-        as to look like what they mean. E.g., asterisks around a word actually
-        look like *emphasis*. Markdown lists look like, well, lists. Even
-        blockquotes look like quoted passages of text, assuming you’ve ever
-        used email.</p>
-
+      <div class="preview-pane">
+        <div id="preview">
+        </div>
       </div>
-    </form>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.4.0/marked.min.js"></script>
     <script src="script.js"></script>
   </body>
