Markup for quote

--- a/frontend/projects/random-quote-machine/index.html
+++ b/frontend/projects/random-quote-machine/index.html
@@ -9,10 +9,15 @@
     <link rel="stylesheet" href="style.css" media="screen" />
   </head>
   <body>
-    <main id="quote" class="content">
-      <blockquote id="display">Quote</blockquote>
+    <main id="quote-box" class="content">
+      <div id="display">
+        <blockquote id="quote">
+          <div id="text">The place God calls you to is the place where your deep gladness and the world’s deep hunger meet.</div>
+          <footer id="author">– Frederick Buechner</footer>
+        </blockquote>
+      </div>
       <div id="panel" class="buttons">
-        <button id="tweet" class="start button" value="tweet" data-key=" ">Tweet</button>
+        <button id="tweet-quote" class="start button" value="tweet" data-key=" ">Tweet</button>
         <button id="new-quote" class="reset button" value="new-quote" data-key="ArrowRight">New Quote</button>
       </div>
     </main>
