Change button to a.button

--- a/frontend/projects/random-quote-machine/index.html
+++ b/frontend/projects/random-quote-machine/index.html
@@ -17,8 +17,8 @@
         </blockquote>
       </div>
       <div id="panel" class="buttons">
-        <button id="tweet-quote" class="start button" value="tweet" data-key=" ">Tweet</button>
-        <button id="new-quote" class="reset button" value="new-quote" data-key="ArrowRight">New Quote</button>
+        <a id="tweet-quote" class="start button" value="tweet" data-key="ArrowLeft">Tweet</a>
+        <a id="new-quote" class="reset button" value="new-quote" data-key="ArrowRight">New Quote</a>
       </div>
     </main>
     <script src="script.js"></script>
