Markup for Random Quote Machine includes data-keycode attribute

--- a/frontend/projects/random-quote-machine/index.html
+++ b/frontend/projects/random-quote-machine/index.html
@@ -17,8 +17,16 @@
         </blockquote>
       </div>
       <div id="panel" class="buttons">
-        <a id="tweet-quote" class="start button" value="tweet" data-key="ArrowLeft">Tweet</a>
-        <a id="new-quote" class="reset button" value="new-quote" data-key="ArrowRight">New Quote</a>
+        <a id="tweet-quote"
+          class="start button"
+          value="tweet"
+          data-key="ArrowLeft"
+          data-keycode="37">Tweet</a>
+        <a id="new-quote"
+          class="reset button"
+          value="new-quote"
+          data-key="ArrowRight"
+          data-keycode="39">New Quote</a>
       </div>
     </main>
     <script src="script.js"></script>
