Use emdash before author text in HTML

--- a/frontend/projects/random-quote-machine/index.html
+++ b/frontend/projects/random-quote-machine/index.html
@@ -13,7 +13,7 @@
       <div id="display">
         <blockquote id="quote">
           <div id="text">The place God calls you to is the place where your deep gladness and the world’s deep hunger meet.</div>
-          <footer id="author">– Frederick Buechner</footer>
+          <footer id="author">— Frederick Buechner</footer>
         </blockquote>
       </div>
       <div id="panel" class="buttons">
