--- a/frontend/projects/random-quote-machine/index.html
+++ b/frontend/projects/random-quote-machine/index.html
@@ -19,6 +19,8 @@
       <div id="panel" class="buttons">
         <a id="tweet-quote"
           class="start button"
+          href="https://twitter.com/intent/tweet?hashtags=quotes&related=freecodecamp&text=%22The%20place%20God%20calls%20you%20to%20is%20the%20place%20where%20your%20deep%20gladness%20and%20the%20world%E2%80%99s%20deep%20hunger%20meet.%22%20%E2%80%94%20Frederick%20Buechner"
+          target="_blank"
           value="tweet"
           data-key="ArrowLeft"
           data-keycode="37">Tweet</a>
