--- a/responsive/gallery-ui/cards/index.html
+++ b/responsive/gallery-ui/cards/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="menu">
       <div class="close-button"><span class="icon">&times;</span> Close</div>
-      <ul>
+      <ul class="nav">
         <li><a href="#">Architecture</a></li>
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Projects</a></li>
