Add data attributes to nav HTML

--- a/responsive/gallery-ui/unsplash/index.html
+++ b/responsive/gallery-ui/unsplash/index.html
@@ -12,10 +12,60 @@
     <div class="menu">
       <div class="close-button"><span class="icon">&times;</span> Close</div>
       <ul class="nav">
-        <li><a href="#">Architecture</a></li>
-        <li><a href="#">Gallery</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Resources</a></li>
+        <li>
+          <a href="#"
+            class="nav-item selected"
+            data-cid="1163637"
+            data-ctitle="Architectural Lines"
+            data-cdesc="Metal and glass, concrete and wood, straight lines and curves."
+            data-cavail="1000"
+          >ARchitecture</a>
+        </li>
+        <li>
+          <a href="#"
+            class="nav-item"
+            data-cid="1198157"
+            data-ctitle="City Lines"
+            data-cdesc="Architects, Engineers and builders...This is for you"
+            data-cavail="51"
+          >City</a>
+        </li>
+        <li>
+          <a href="#"
+            class="nav-item"
+            data-cid="827737"
+            data-ctitle="Sport"
+            data-cdesc="Exercise, activities, fashion and lifestyle"
+            data-cavail="137"
+          >Sport</a>
+        </li>
+        <li>
+          <a href="#"
+            class="nav-item"
+            data-cid="573226"
+            data-ctitle="Retro"
+            data-cdesc="Retro, vintage, blue, and car photos"
+            data-cavail="29"
+          >Retro</a>
+        </li>
+        <li>
+          <a href="#"
+            class="nav-item"
+            data-cid="610876"
+            data-ctitle="Sky"
+            data-cdesc="Sky, star, night, and space photos"
+            data-cavail="52"
+          >Sky</a>
+        </li>
+        <li>
+          <a href="#"
+            class="nav-item"
+            data-cid="504554"
+            data-ctitle="Found Typography"
+            data-cdesc="Letters and numbers out in the wild"
+            data-cavail="55"
+          >Typography</a>
+        </li>
       </ul>
     </div>
     <div class="content">
