Fix Architecture menu text

--- a/responsive/gallery-ui/unsplash/index.html
+++ b/responsive/gallery-ui/unsplash/index.html
@@ -19,7 +19,7 @@
             data-ctitle="Architectural Lines"
             data-cdesc="Metal and glass, concrete and wood, straight lines and curves."
             data-cavail="1000"
-          >ARchitecture</a>
+          >Architecture</a>
         </li>
         <li>
           <a href="#"
