Add Original Collection nav item

--- a/responsive/gallery-ui/unsplash/index.html
+++ b/responsive/gallery-ui/unsplash/index.html
@@ -13,6 +13,9 @@
       <div class="close-button"><span class="icon">&times;</span> Close</div>
       <ul class="nav">
         <li>
+          <a href="#" class="nav-item selected">Original Collection</a>
+        </li>
+        <li>
           <a href="#"
             class="nav-item"
             data-cid="1163637"
