--- a/frontend/react/learn/01-create-a-simple-jsx-element/index.html
+++ b/frontend/react/learn/01-create-a-simple-jsx-element/index.html
@@ -6,5 +6,5 @@
   </head>
   <body>
     <main id="root"></main>
-  <script type="text/javascript" src="main.js"></script></body>
+  </body>
 </html>
