Add a comment somewhere within the provided div element, without modifying the existing h1 or p elements.

--- a/frontend/react/src/index.html
+++ b/frontend/react/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>React: Create a Complex JSX Element</title>
+    <title>freeCodeCamp React Challenges</title>
   </head>
   <body>
     <main id="root"></main>
