Complete the function so it returns a single div element which contains some string of text.

--- a/frontend/react/src/index.html
+++ b/frontend/react/src/index.html
@@ -5,6 +5,6 @@
     <title>freeCodeCamp React Challenges</title>
   </head>
   <body>
-    <main id="challenge-node"></main>
+    <main id="root"></main>
   </body>
 </html>
