--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,7 +6,19 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <main id="root"></main>
+    <h1 class="header">Learn Sass</h1>
+    <div class="blog-post">
+      <h2>Some random title</h2>
+      <p>This is a paragraph with some random text in it</p>
+    </div>
+    <div class="blog-post">
+      <h2>Header #2</h2>
+      <p>Here is some more random text.</p>
+    </div>
+    <div class="blog-post">
+      <h2>Here is another header</h2>
+      <p>Even more random text within a paragraph</p>
+    </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
