--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,10 +6,7 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <div class="blog-post">
-      <h1>Blog Title</h1>
-      <p>This is a paragraph</p>
-    </div>
+    <div id="awesome"></div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
