--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <div id="awesome"></div>
+    <div id="box"></div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
