--- a/frontend/sass/learn/04-add-logic-to-your-styles.html
+++ b/frontend/sass/learn/04-add-logic-to-your-styles.html
@@ -1,5 +1,21 @@
 <style type='text/sass'>
-
+  @mixin border-stroke($val) {
+    @if $val == light {
+      border: 1px solid black;
+    }
+    @else if $val == medium {
+      border: 3px solid black;
+    }
+    @else if $val == heavy {
+      border: 6px solid black;
+    }
+    @else if $val == none {
+      border: none;
+    }
+    @else {
+      border: none;
+    }
+  }
 
 
   #box {
