--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,7 +6,11 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <div id="box"></div>
+    <p class="text-1">Hello</p>
+    <p class="text-2">Hello</p>
+    <p class="text-3">Hello</p>
+    <p class="text-4">Hello</p>
+    <p class="text-5">Hello</p>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
