--- a/frontend/sass/learn/05-create-a-sass-loop.html
+++ b/frontend/sass/learn/05-create-a-sass-loop.html
@@ -1,7 +1,7 @@
 <style type='text/sass'>
-
-
-
+  @for $j from 1 through 6 {
+    .text-#{$j} { font-size: 10px * $j; }
+  }
 </style>
 
 <p class="text-1">Hello</p>
