--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,11 +6,9 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <p class="text-1">Hello</p>
-    <p class="text-2">Hello</p>
-    <p class="text-3">Hello</p>
-    <p class="text-4">Hello</p>
-    <p class="text-5">Hello</p>
+    <div class="blue-bg"></div>
+    <div class="black-bg"></div>
+    <div class="red-bg"></div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
