--- a/frontend/sass/learn/06-map-over-items-in-a-list.html
+++ b/frontend/sass/learn/06-map-over-items-in-a-list.html
@@ -1,6 +1,7 @@
 <style type='text/sass'>
-
-
+  @each $color in blue, black, red {
+    .#{$color}-bg {background-color: $color;}
+  }
 
   div {
     height: 200px;
