--- a/frontend/sass/src/index.html
+++ b/frontend/sass/src/index.html
@@ -6,9 +6,16 @@
     <link rel='stylesheet' href='style.css'>
   </head>
   <body>
-    <div class="blue-bg"></div>
-    <div class="black-bg"></div>
-    <div class="red-bg"></div>
+    <p class="text-1">Hello</p>
+    <p class="text-2">Hello</p>
+    <p class="text-3">Hello</p>
+    <p class="text-4">Hello</p>
+    <p class="text-5">Hello</p>
+    <p class="text-6">Hello</p>
+    <p class="text-7">Hello</p>
+    <p class="text-8">Hello</p>
+    <p class="text-9">Hello</p>
+    <p class="text-10">Hello</p>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
