--- a/frontend/sass/learn/07-conditional-with-while.html
+++ b/frontend/sass/learn/07-conditional-with-while.html
@@ -1,7 +1,9 @@
 <style type='text/sass'>
-
-
-
+  $x: 1;
+  @while $x <= 10 {
+    .text-#{$x} { font-size: 5px * $x; }
+    $x: $x + 1;
+  }
 </style>
 
 <p class="text-1">Hello</p>
