--- a/frontend/sass/learn/09-extend.html
+++ b/frontend/sass/learn/09-extend.html
@@ -7,10 +7,10 @@
     border: 1px solid black;
     margin: 0 auto;
   }
-
-
-
-
+  .info-important {
+    @extend .info;
+    background-color: magenta;
+  }
 </style>
 <h3>Posts</h3>
 <div class="info-important">
