--- a/dataviz/learn/01-add-document-elements.html
+++ b/dataviz/learn/01-add-document-elements.html
@@ -5,11 +5,9 @@
 <body>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script>
-    // Add your code below this line
-
-
-
-    // Add your code above this line
+    d3.select("body")
+      .append("h1")
+      .text("Learning D3");
   </script>
 </body>
 </html>
