Complete challenge: Select a Group of Elements

--- a/dataviz/learn/02-select-group-of-elements.html
+++ b/dataviz/learn/02-select-group-of-elements.html
@@ -10,11 +10,7 @@
   </ul>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script>
-    // Add your code below this line
-
-
-
-    // Add your code above this line
+    d3.selectAll("li").text("list item")
   </script>
 </body>
 </html>
